# RoboMinerRs

./: .gitignore  ACHIEVEMENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROBOTS.md  RUST_MIGRATION_PHASE1.md  cleanstart.sh  deploy_to_pi.sh  gameflow.md  robominer_deploy.sh  update.sh
robominer-domain/: Cargo.toml
robominer-domain/src/: achievements.rs  activity.rs  app_shell.rs  assets.rs  constants.rs  error.rs  leaderboard.rs  lib.rs  loadout.rs  mining_area_overview.rs  mining_queue.rs  mining_results.rs  rejection_messages.rs  robot_config.rs  shop.rs  users.rs
robominer-domain/src/loadout/: ground.rs  load.rs  mod.rs  tests.rs  types.rs
robominer-domain/src/simulation/: completed.rs  legacy.rs  mod.rs  pool.rs  rally.rs  robots.rs
robominer-domain/src/simulation/tests/: loadout.rs  mod.rs  pool.rs  rally.rs
robominer-domain/tests/: depot_loadout_rally_db.rs  pool_golden.rs  program_recommendations.rs  rally_golden.rs
robominer-domain/tests/fixtures/pool/: dual_item_pool_seed17.json  single_miner_pool_seed0.json
robominer-domain/tests/fixtures/rally/: animation_seed0.json  depot_dump_cerbonium_advanced_seed0.json  (+11 more)
robominer-domain/tests/support/: mod.rs  pool.rs  rally.rs
robominer-engine/: Cargo.toml
robominer-engine/src/: achievement.rs  activity.rs  assets.rs  cli.rs  database.rs  leaderboard.rs  lib.rs  main.rs  migrate.rs  mining.rs  output.rs  program.rs  rally.rs  robot.rs  shop.rs  user.rs  verify.rs
robominer-engine/tests/: achievement_db_cli.rs  activity_read_model_db_cli.rs  claim_robot_config_db_cli.rs  leaderboard_read_model_db_cli.rs  migrate_db_cli.rs  mining_area_overview_read_model_db_cli.rs  mining_area_read_model_db_cli.rs  mining_queue_db_cli.rs  mining_queue_read_model_db_cli.rs  pool_db_cli.rs  program_source_db_cli.rs  rally_db_cli.rs  rally_read_model_db_cli.rs  robot_config_db_cli.rs  shop_db_cli.rs  user_account_update_db_cli.rs  user_create_db_cli.rs  user_login_db_cli.rs  verify_source_cli.rs
robominer-engine/tests/support/: mod.rs
robominer-optimize/: Cargo.toml
robominer-optimize/src/: catalog.rs  cli.rs  fitness.rs  ga.rs  genome.rs  lib.rs  main.rs  report.rs
robominer-test-support/: Cargo.toml
robominer-test-support/src/: db_fixtures.rs  golden.rs  lib.rs  loadout_records.rs
robominer-test-support/src/scenario_fixtures/: achievement.rs  achievement_cli.rs  cancel_mining_queue.rs  claim_results.rs  default_robot_parts.rs  enqueue_mining.rs  mining_queue.rs  mod.rs  pool.rs  program_source.rs  rally.rs  robot_apply.rs  robot_config.rs  shop.rs  web_smoke.rs
robominer-web/: Cargo.toml
robominer-web/src/: animation_script.rs  app_shell.rs  csrf.rs  health.rs  html.rs  http.rs  lib.rs  main.rs  mining_area_atlas.rs  rate_limit.rs  request_helpers.rs  router.rs  server.rs  session.rs  settings.rs  startup.rs
robominer-web/src/account_page/: mod.rs  render.rs  tests.rs
robominer-web/src/achievements_page/: mod.rs  render.rs  tests.rs
robominer-web/src/auth_pages/: mod.rs  render.rs  tests.rs
robominer-web/src/edit_code_page/: editor.rs  library.rs  mod.rs  render.rs  scripts.rs  tests.rs
robominer-web/src/help_page/: mod.rs  tests.rs
robominer-web/src/help_pages/: content.rs  mod.rs  render.rs
robominer-web/src/html/: banners.rs  csrf.rs  format.rs  layout.rs  mod.rs  shell.rs  tests.rs
robominer-web/src/leaderboard_page/: mod.rs  render.rs  render_areas.rs  render_players.rs  render_robots.rs  render_shared.rs  render_sidebar.rs  tests.rs
robominer-web/src/mining_area_overview_page/: mod.rs  render.rs  tests.rs
robominer-web/src/mining_queue_page/: inspector.rs  mod.rs  render.rs  robots.rs  scripts.rs  tests.rs
robominer-web/src/mining_results_page/: mod.rs  render.rs  scripts.rs  tests.rs
robominer-web/src/rally_pages/: mod.rs  tests.rs
robominer-web/src/robot_page/: config.rs  fleet.rs  mod.rs  render.rs  scripts.rs  tests.rs
robominer-web/src/shop_page/: catalog.rs  helpers.rs  inventory.rs  mod.rs  render.rs  scripts.rs  tests.rs
robominer-web/static/css/: robominer.css
robominer-web/static/help/: mechanics.html  program_tips.html  robot_program.html  tutorial_intro.html  tutorial_step_1.html  tutorial_step_2.html  tutorial_step_3.html  tutorial_step_4.html  tutorial_step_5.html
robominer-web/static/js/: rally_animation.js
robominer-web/tests/: account_actions.rs  achievement_claim.rs  edit_code_actions.rs  health.rs  http_server_smoke.rs  login.rs  mining_queue_actions.rs  read_model_pages.rs  robot_apply.rs  shop_actions.rs  web_db_smoke.rs
robominer-web/tests/support/: mod.rs
(+184 files in other folders)
