[package]
name = "robominer-test-support"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
robominer-db = { version = "0.1.0", path = "../robominer-db" }
robominer-domain = { version = "0.1.0", path = "../robominer-domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql"] }
